--- a/Todo.Web/Components/Layout/MainLayout.razor
+++ b/Todo.Web/Components/Layout/MainLayout.razor
@@ -25,7 +25,7 @@
     <a class="dismiss">🗙</a>
 </div>
 
-<AuthorizeView>
+@*<AuthorizeView>
     <Authorized>
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="Account/Logout">
@@ -33,4 +33,4 @@
             </NavLink>
         </div>
     </Authorized>
-</AuthorizeView>
+</AuthorizeView>*@
