--- a/Todo.Web/Components/Pages/ProjectPage.razor.css
+++ b/Todo.Web/Components/Pages/ProjectPage.razor.css
@@ -1,5 +1,7 @@
 html, body {
     background-color: #DED7D7;
+    width: 100%;
+    overflow-x: hidden;
 }
 
 .todo-list-title {
@@ -33,18 +35,20 @@ span {
 
 .todo-lists-container {
     display: flex;
-    gap: 20px; /*gap: 2%;*/
+    box-sizing: border-box;
+    gap: 1%;
     padding: 20px;
-    overflow-x: auto;
+    width: 1200px;
+    overflow-x: auto; /* Prevent horizontal scroll */
 }
 
 .todo-list-container {
-    min-width: 300px;
+    display: inline-block;
     background-color: #f5f5f5;
     border-radius: 8px;
     padding: 16px;
+    min-width: 300px;
 }
-
 .task-container {
     background-color: white;
     border-radius: 4px;
