label is removed after exiting the modify button

--- a/Todo.Web/Components/Pages/ProjectPage.razor
+++ b/Todo.Web/Components/Pages/ProjectPage.razor
@@ -293,6 +293,7 @@ else {
     private void HandleIsModifier(TodoItemDto todoItem)
     {
         CurrentTodoItem = CurrentTodoItem == todoItem ? null : todoItem;
+        IsHandleLabel = false;
     }
 
     private void ToggleLabelEditor(TodoItemDto todoItem)
